Fixed window spacing

--- a/main.css
+++ b/main.css
@@ -1,23 +1,28 @@
 body {
     display: flex;
     flex-direction: column;
+    height: 100%;
     min-width: 375px;
+    overflow: hidden;
 }
 
 header {
-    flex: 0 80px;
+    flex: 0 60px;
 }
 
 main {
-    flex: 1 calc(100vh - 110px);
+    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
+    row-gap: 10px;
 }
 
 footer {
-    flex: 0 30px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 @media (max-height: 600px) {
